--- a/Condos.html
+++ b/Condos.html
@@ -62,8 +62,8 @@
                     <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
                         <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
                         <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
-                        <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
-                        <li><a class="dropdown-item" href="#">Townhouses</a></li>
+                        <li><a class="dropdown-item" href="Single Family Homes.html">Single Family Homes</a></li>
+                        <li><a class="dropdown-item" href="Townhouses.html">Townhouses</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
