--- a/Mortgage Renewal Struggles.html
+++ b/Mortgage Renewal Struggles.html
@@ -61,8 +61,8 @@
                     <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
                         <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
                         <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
-                        <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
-                        <li><a class="dropdown-item" href="#">Townhouses</a></li>
+                        <li><a class="dropdown-item" href="Single Family Homes.html">Single Family Homes</a></li>
+                        <li><a class="dropdown-item" href="Townhouses.html">Townhouses</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -96,10 +96,58 @@
 <!-- Foreclosure Page Layout -->
 <section class="foreclosure-banner-section">
     <div class="foreclosure-banner-container">
-        <img src="assests/Facing Foreclosure.svg" alt="Facing Foreclosure" class="foreclosure-banner-img">
+        <img src="assests/Mortgage Renewal Struggle.jpg" alt="Facing Foreclosure" class="foreclosure-banner-img">
     </div>
 </section>
 
+<!-- Introduction Section -->
+<div class="mortgage-box bg-light-blue" id="intro-mortgage">
+    <h2 class="mortgage-header">Canadian Homeowners Face Rising Mortgage Challenges: Preparing for a Mortgage Renewal</h2>
+    <p class="mortgage-text">As economic conditions tighten, Canadian lenders and financial experts are voicing concerns about homeowners struggling to keep up with rising mortgage costs. Nearly 30% of new mortgage holders allocate around 25% of their income to mortgage payments alone. Since February 2022, 30% of homeowners have seen increased payments. With renewals looming, most Canadians can expect higher payments through 2025, creating a “perfect storm” of rising rates, increasing costs, and declining home values.</p>
+    <img src="assests/About Us 1.svg" alt="Canadian Mortgage Challenges" class="mortgage-image">
+</div>
+
+<!-- Evaluating Options Section -->
+<div class="mortgage-box bg-light-green" id="options-mortgage">
+    <h2 class="mortgage-header">Evaluating Your Options: Selling Before Renewal</h2>
+    <p class="mortgage-text">If you have financial flexibility, riding out this downturn might work, but for many, higher mortgage costs could make staying unsustainable. As renewals bring higher payments, assess your finances early and consider if selling might be more viable. Preparing for worst-case scenarios can provide more options and avoid last-minute challenges at renewal time.</p>
+    <div class="info-box">Tip: Don’t wait until the renewal date to explore options. Acting early allows more flexibility in decision-making.</div>
+</div>
+
+<!-- Understanding Mortgage Renewal Section -->
+<div class="mortgage-box bg-light-yellow" id="understanding-renewal">
+    <div class="mortgage-columns">
+        <div class="column-item">
+            <h2 class="mortgage-header">Understanding Mortgage Renewal</h2>
+            <p class="mortgage-text">When you take out a mortgage, payments are based on the rate at the time. On renewal, rates may be recalculated based on the current market, impacting your payments significantly. Fixed-rate mortgages lock rates until term end, while variable rates fluctuate with the market. Recent term extensions to 40 years have reduced monthly payments but leave homeowners exposed to rate hikes at renewal.</p>
+        </div>
+        <div class="column-item">
+            <h2 class="mortgage-header">Evaluating Renewal Options</h2>
+            <p class="mortgage-text">When renewal time arrives, lenders offer terms reflecting market conditions. You’ll need to decide whether to renew, refinance, or sell. If renewal could increase payments beyond affordability, selling might be a safer option. In a market with falling prices, selling sooner could help cover your mortgage and moving costs for a smoother transition.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Preparing for Mortgage Renewal Timeline Section -->
+<div class="mortgage-box bg-light-gray" id="preparing-renewal-timeline">
+    <h2 class="mortgage-header">Preparing for Your Mortgage Renewal Timeline</h2>
+    <p class="mortgage-text">Mortgage renewal prep begins on the day you secure your mortgage, and it’s critical to act early. If your payment history includes missed or late payments, your lender might not renew, especially with rising payments. Canadian lenders are required to notify you 21 days before the renewal date if they don’t intend to renew, so it’s wise to plan well in advance.</p>
+    <img src="assests/About Us 2.svg" alt="Preparing for Renewal" class="mortgage-image">
+</div>
+
+<!-- Selling with a Pending Renewal Section -->
+<div class="mortgage-box bg-light-green" id="selling-pending-renewal">
+    <h2 class="mortgage-header">Selling Your Home with a Mortgage Renewal on the Horizon</h2>
+    <p class="mortgage-text">Once you decide to sell, acting quickly is essential. The current market challenges buyers who bought at peak prices, and with values declining, selling sooner could minimize losses. Start by determining your bottom line and set a realistic price to meet mortgage and moving costs. Choosing an experienced agent who understands tight timelines can streamline the sale.</p>
+    <div class="info-box">Pro Tip: Work with a real estate agent familiar with selling under tight timelines to ensure a smooth, efficient sale process.</div>
+</div>
+
+<!-- Steps for Success Section -->
+<div class="mortgage-box bg-light-yellow" id="steps-for-success">
+    <h2 class="mortgage-header">Staying Prepared: Proactive Steps for Success</h2>
+    <p class="mortgage-text">In a challenging market, proactive planning is key. Understand your mortgage terms, work with professionals, and monitor the market closely to make informed choices. Assess your renewal options early and seek guidance to secure your financial future with minimal disruption.</p>
+    <img src="assests/About Us 2.svg" alt="Proactive Planning" class="mortgage-image">
+</div>
 
 
 
@@ -116,11 +164,11 @@
 <section class="conclusion-section">
     <div class="conclusion-box">
         <div class="step-indicator">
-            <span class="step-number">Tough Choices in Tough Times: What to Do When Facing Foreclosure</span>
+            <span class="step-number">Conclusion</span>
         </div>
         <!-- <h2 class="conclusion-title">Moving Forward: Navigating the Sale with Confidence</h2> -->
         <p class="conclusion-text">
-            If your home is in foreclosure, selling it before the sheriff’s sale can help you avoid damaging your credit and facing additional tax penalties. Acting quickly and getting a head start in the process gives you more time to prepare your home for sale, increasing your chances of getting a fair price and avoiding the harsh consequences of foreclosure. While the best outcome is catching up on your mortgage payments, taking swift action and preparing early can still allow you to sell your home before the foreclosure is finalized, potentially through a realtor or other means.
+            Selling a home that requires repairs involves a blend of strategic planning, honest communication, and a strong understanding of the market. By carefully evaluating the home’s condition, addressing essential repairs, and aligning the selling approach with clear objectives, sellers can pave the way for a smoother sales process. Working with experienced real estate professionals and adhering to legal requirements further enables homeowners to confidently present their property’s potential, attracting prospective buyers and improving the chances of a successful sale. Ultimately, by applying these principles, homeowners can unlock the inherent value of their property, increase its appeal, and navigate the real estate market with success.
         </p>
         <div class="conclusion-call-to-action">
             <a button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactFormModal">Contact Us Today for Support</a>
@@ -193,6 +241,10 @@
         <p>&copy; 2023 All rights reserved</p>
     </div>
 </footer>
+
+
+
+
 
 
 
