--- a/Unfinished Construction.html
+++ b/Unfinished Construction.html
@@ -96,19 +96,85 @@
 <!-- Foreclosure Page Layout -->
 <section class="foreclosure-banner-section">
     <div class="foreclosure-banner-container">
-        <img src="assests/Facing Foreclosure.svg" alt="Facing Foreclosure" class="foreclosure-banner-img">
+        <img src="assests/Unfinished Construction.jpg" alt="Facing Foreclosure" class="foreclosure-banner-img">
     </div>
 </section>
 
+<section class="grid-main-container">
 
+    <!-- Introduction Card -->
+    <div class="grid-card bg-blue" id="card-intro">
+        <img src="assests/About Us 1.svg" alt="Unfinished Home" class="grid-image">
+        <h2 class="grid-title">Selling an Unfinished Home: Strategies for Success</h2>
+        <p class="grid-text">Selling a home is challenging, and an unfinished property can add complexity. However, modern technology provides resources to make unfinished homes more appealing and increase their chances of selling.</p>
+        <div class="grid-overlay">Use strategies to make an unfinished home stand out in the market.</div>
+    </div>
 
+    <!-- Challenges Card -->
+    <div class="grid-card bg-gray" id="card-challenges">
+        <img src="assests/About Us 1.svg" alt="Challenges of Unfinished Homes" class="grid-image">
+        <h2 class="grid-title">Challenges of Selling an Unfinished Home</h2>
+        <p class="grid-text">Buyers may be wary of unfinished homes due to completion costs and effort. Sellers must disclose known issues, including incomplete construction and potential expenses, making transparency essential.</p>
+        <div class="grid-overlay">Transparency about the unfinished state builds buyer confidence.</div>
+    </div>
 
+    <!-- Realtor Card -->
+    <div class="grid-card bg-green" id="card-realtor">
+        <img src="assests/About Us 1.svg" alt="Experienced Realtor" class="grid-image">
+        <h2 class="grid-title">Working with an Experienced Realtor</h2>
+        <p class="grid-text">The right realtor can make a big difference in selling an unfinished property. Look for agents experienced in this area who know how to market and present unfinished properties effectively.</p>
+        <div class="grid-overlay">Choose a realtor who understands unique selling points for unfinished homes.</div>
+    </div>
 
+    <!-- Visual Projections Card -->
+    <div class="grid-card bg-yellow" id="card-visual-projections">
+        <img src="assests/About Us 1.svg" alt="Visual Projections for Homes" class="grid-image">
+        <h2 class="grid-title">Using Visual Projections</h2>
+        <p class="grid-text">Visual tools like 3D tours and renderings help buyers visualize an unfinished home’s potential. Virtual tours can highlight layouts, finishes, and aesthetics of the finished property.</p>
+        <div class="grid-overlay">Virtual renderings help buyers envision the final product.</div>
+    </div>
 
+    <!-- Online Marketing Card -->
+    <div class="grid-card bg-blue" id="card-online-marketing">
+        <img src="assests/About Us 1.svg" alt="Online Marketing" class="grid-image">
+        <h2 class="grid-title">Leveraging Online Marketing</h2>
+        <p class="grid-text">Online platforms, particularly social media, are essential for marketing unfinished homes. High-quality images, 3D renderings, and targeted ads can reach a larger audience and spark interest.</p>
+        <div class="grid-overlay">Social media provides wide exposure and engagement for listings.</div>
+    </div>
 
+    <!-- Other Marketing Tactics Card -->
+    <div class="grid-card bg-gray" id="card-other-marketing">
+        <img src="assests/About Us 1.svg" alt="Additional Marketing Strategies" class="grid-image">
+        <h2 class="grid-title">Other Marketing Tactics</h2>
+        <p class="grid-text">In addition to online marketing, consider hosting open houses or showings with refreshments. If some areas can be staged, use furniture to make the space feel inviting.</p>
+        <div class="grid-overlay">Engage buyers with immersive, in-person experiences.</div>
+    </div>
 
+    <!-- Customization Opportunity Card -->
+    <div class="grid-card bg-green" id="card-opportunity">
+        <img src="assests/About Us 1.svg" alt="Opportunity for Customization" class="grid-image">
+        <h2 class="grid-title">Presenting Customization Opportunities</h2>
+        <p class="grid-text">Present the unfinished state as an opportunity for buyers to customize finishes and layouts to their taste. Highlight the creative freedom in finishing the home to their vision.</p>
+        <div class="grid-overlay">Customization options increase buyer appeal.</div>
+    </div>
 
+    <!-- Permits Card -->
+    <div class="grid-card bg-yellow" id="card-permits">
+        <img src="assests/About Us 1.svg" alt="Permits for Unfinished Homes" class="grid-image">
+        <h2 class="grid-title">Ensuring Permits are in Place</h2>
+        <p class="grid-text">Permits ensure that work meets safety standards and is up to code. Unpermitted work can deter buyers and lead to legal challenges. An experienced realtor can navigate these issues.</p>
+        <div class="grid-overlay">Permits provide safety and compliance assurance to buyers.</div>
+    </div>
 
+    <!-- Conclusion Card -->
+    <div class="grid-card bg-blue" id="card-conclusion">
+        <img src="assests/About Us 1.svg" alt="Conclusion for Selling" class="grid-image">
+        <h2 class="grid-title">Turning Challenges into Opportunities</h2>
+        <p class="grid-text">An unfinished home offers buyers a chance to create their dream space. With strategic marketing and the right guidance, you can transform challenges into a unique opportunity for customization.</p>
+        <div class="grid-overlay">A tailored approach helps make unfinished homes appealing to buyers.</div>
+    </div>
+
+</section>
 
 
 
@@ -116,11 +182,12 @@
 <section class="conclusion-section">
     <div class="conclusion-box">
         <div class="step-indicator">
-            <span class="step-number">Tough Choices in Tough Times: What to Do When Facing Foreclosure</span>
+            <span class="step-number">Conclusion</span>
         </div>
         <!-- <h2 class="conclusion-title">Moving Forward: Navigating the Sale with Confidence</h2> -->
         <p class="conclusion-text">
-            If your home is in foreclosure, selling it before the sheriff’s sale can help you avoid damaging your credit and facing additional tax penalties. Acting quickly and getting a head start in the process gives you more time to prepare your home for sale, increasing your chances of getting a fair price and avoiding the harsh consequences of foreclosure. While the best outcome is catching up on your mortgage payments, taking swift action and preparing early can still allow you to sell your home before the foreclosure is finalized, potentially through a realtor or other means.
+            Selling an unfinished home comes with its own set of challenges, but with the right approach, it’s possible to turn those obstacles into selling points. By using modern technology to help buyers visualize the property’s potential, working with an experienced realtor, and emphasizing the customizable aspects of the home, you can increase interest and attract the right buyer. <br>
+            A home that needs work isn’t necessarily a disadvantage. With a thoughtful marketing approach, you can help buyers see the unique opportunities of an unfinished property, transforming it from a project into their potential dream home.
         </p>
         <div class="conclusion-call-to-action">
             <a button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactFormModal">Contact Us Today for Support</a>
