--- a/divorce and seperation.html
+++ b/divorce and seperation.html
@@ -60,24 +60,27 @@
                         Home We Buy
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
-                        <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
-                        <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
-                        <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
-                        <li><a class="dropdown-item" href="#">Townhouses</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="whySellDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Why Sell?
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
-                        <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
-                        <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
-                        <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
-                        <li><a class="dropdown-item" href="Financial Difficulties.html">Financial Difficulties</a></li>
-                        <li><a class="dropdown-item" href="#">Relocation</a></li>
-                        <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
-                    </ul>
+                      <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
+                      <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
+                      <li><a class="dropdown-item" href="Single Family Homes.html">Single Family Homes</a></li>
+                      <li><a class="dropdown-item" href="Townhouses.html">Townhouses</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="whySellDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Why Sell?
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
+                      <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
+                      <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
+                      <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
+                      <li><a class="dropdown-item" href="Financial Difficulties.html">Financial Difficulties</a></li>
+                      <li><a class="dropdown-item" href="Relocation.html">Relocation</a></li>
+                      <li><a class="dropdown-item" href="Homes Needing Repairs.html">Homes Needing Repairs</a></li>
+                      <li><a class="dropdown-item" href="Downsizing.html">Downsizing</a></li>
+                      <li><a class="dropdown-item" href="Unfinished Construction.html">Unfinished Construction</a></li>
+                      <li><a class="dropdown-item" href="Mortgage Renewal Struggles.html">Mortgage Renewal Struggles</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
