--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     
 </head>
 <body>
+
+
+    
 <div style="overflow-x: hidden;">
 
    <!-- Fixed Navbar -->
@@ -81,8 +84,9 @@
                         <li><a class="dropdown-item" href="Mortgage Renewal Struggles.html">Mortgage Renewal Struggles</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
+                <li class="nav-item"><a class="nav-link" href="How It Works.html">How It Works</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="Faq.html">FAQ</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li> -->
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" data-bs-target="#contactFormModal" style="cursor: pointer;">Contact Us</a></li>
             </ul>
