--- a/Financial Difficulties.html
+++ b/Financial Difficulties.html
@@ -82,10 +82,10 @@
                         <li><a class="dropdown-item" href="Mortgage Renewal Struggles.html">Mortgage Renewal Struggles</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li> -->
-                <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" data-bs-target="#contactFormModal" style="cursor: pointer;">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="How It Works.html">How It Works</a></li>
+                <li class="nav-item"><a class="nav-link" href="About Us.html">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="Faq.html">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="Contact Us.html">Contact Us</a></li>
             </ul>
             <!-- <a href="#" class="btn btn-warning ms-3">Sell Now</a> -->
             <a button type="button" class="btn btn-warning ms-3" data-bs-toggle="modal" data-bs-target="#contactFormModal">Sell Now</a>
@@ -272,25 +272,28 @@
                 <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
                 <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
             </div>
+            
         </div>
         
         <!-- Quick Links -->
         <div class="footer-links">
             <h3>Quick Link</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">How It Works</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About Us.html">About Us</a></li>
+                <li><a href="Faq.html">FAQ</a></li>
+                <li><a href="How It Works.html">How It Works</a></li>
             </ul>
         </div>
 
         <!-- Blog Links -->
         <div class="footer-blog">
-            <h3>Blog</h3>
+            <h3>Homes We Buy</h3>
             <ul>
-                <li><a href="#">People Saying About Footer.<br><span>8 Oct, 2024</span></a></li>
-                <li><a href="#">People Saying About Footer.<br><span>8 Oct, 2024</span></a></li>
+                <li><a href="Apartment Blocks.html">Apartment Blocks</a></li>
+                <li><a href="Condos.html">Condos</a></li>
+                <li><a href="Single Family Homes.html">Single Family Homes</a></li>
+                <li><a href="Townhouses.html">Townhouses</a></li>
             </ul>
         </div>
 
@@ -307,7 +310,7 @@
 
     <!-- Footer Bottom -->
     <div class="footer-bottom" id="bottom">
-        <p>&copy; 2023 All rights reserved</p>
+        <p>&copy; 2024 GIGI Buys Homes. All rights reserved</p>
     </div>
 </footer>
 
