--- a/Contact Us.html
+++ b/Contact Us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Family Houses - GIGI</title>
+    <title>Contact Us - GIGI</title>
     <link rel="icon" type="image/x-icon" href="assests/GIGI Favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -155,10 +155,80 @@
 
 
 
+<!-- Contact Information Section -->
+<section class="contact-info-section">
+    <h2>Contact Information</h2>
+    <div class="contact-info-cards">
+        <!-- Phone Contact Card -->
+        <div class="contact-card">
+            <img src="assests/Contact Us Icon.svg" alt="Phone Icon">
+            <h3>By Phone</h3>
+            <p><span>CA</span> Canada: 1-888-742-4723<br><span>US</span> USA: 1-888-535-4238</p>
+            <p>We’re available during our business hours to answer your questions and assist you.</p>
+            <button>CALL US</button>
+        </div>
+
+        <!-- Live Chat Contact Card -->
+        <div class="contact-card">
+            <img src="assests/Live Chat Icon.svg" alt="Live Chat Icon">
+            <h3>Live Chat</h3>
+            <p>Connect with a customer service representative instantly through our live chat feature. Click on the chat icon in the bottom right corner of your screen to start a conversation.</p>
+            <button>CHAT WITH US</button>
+        </div>
+
+        <!-- Email Contact Card -->
+        <div class="contact-card">
+            <img src="assests/Email Icon Black.svg" alt="Email Icon">
+            <h3>Email</h3>
+            <p>For non-urgent inquiries or if you prefer written communications, you can reach us via email at <strong>info@gigibuyshomes.com<br>sale@gigibuyshomes.com</strong></p>
+            <button onclick="window.location.href='mailto:info@gigibuyshomes.com?subject=Inquiry from Website'">EMAIL US</button>
+
+        </div>
+    </div>
+</section>
 
 
+<section class="custom-offer-section">
+    <div class="custom-offer-container">
+        <!-- Left Side Image -->
+        <div class="custom-image-container">
+            <img src="assests/Explore Property 1.svg" alt="City Image" class="custom-offer-image">
+        </div>
+
+        <!-- Right Side Form and Content -->
+        <div class="custom-form-container">
+            <h2>Sell Your Home Quickly for Cash!</h2>
+            <h3>Here’s How It Works:</h3>
+            <ul class="custom-offer-list">
+                <li>Submit the simple form below</li>
+                <li>We schedule a quick walkthrough of your home</li>
+                <li>Receive your cash offer within 24 hours</li>
+            </ul>
+            <p class="custom-no-hidden">No hidden fees, no realtors, and no commissions—just a quick, direct sale.</p>
+
+            <h4>Get Started Now</h4>
+            <form id="cashOfferForm" onsubmit="sendEmail(); reset(); return false;">
+                
+                <input type="text" class="form-control" id="address" placeholder="Address" required>
+                <input type="text" class="form-control" id="name" placeholder="Name" required>
+                <input type="number" class="form-control" id="phone" placeholder="Phone" required>
+                <input type="email" class="form-control" id="email" placeholder="Email" required>
+                <div class="form-check">
+                    <input type="checkbox" id="terms" class="form-check-input" required>
+                    <label class="form-check-label" for="terms" style="color: #000000;">I have read and accepted the Terms & Conditions and Privacy Statement.</label>
+                </div>
+                <button type="submit" class="btn btn-warning w-100">Submit</button>
+            </form>
+        </div>
+    </div>
+</section>
 
 
+<!-- Appreciation Section -->
+<section class="appreciation-section">
+    <h2>We appreciate your interest in GIGI Buys Homes, and we look forward to assisting you with your home-selling needs. Your satisfaction is our priority, and we’re committed to providing you with a smooth and efficient experience.</h2>
+    <p>Whether you have questions, want to discuss an offer, or simply need guidance, our team is here to support you every step of the way. We value your time and will respond promptly to your inquiries. Thank you for considering GIGI Buys Homes as your trusted partner in selling your home quickly and with ease. We’re here to help you make a smooth transition to your next chapter.</p>
+</section>
 
 
 
