--- a/Contact Us.html
+++ b/Contact Us.html
@@ -162,7 +162,7 @@
         <div class="contact-card">
             <img src="assests/Contact Us Icon.svg" alt="Phone Icon">
             <h3>By Phone</h3>
-            <p><span>CA</span> Canada: 1-888-742-4723<br><span>US</span> USA: 1-888-535-4238</p>
+            <p>India: +91 123 456 789<br> USA: +1-234-567-890</p>
             <p>We’re available during our business hours to answer your questions and assist you.</p>
             <button>CALL US</button>
         </div>
