--- a/index.html
+++ b/index.html
@@ -654,19 +654,18 @@
 
 <!-- Client Feedback Section -->
 <!-- Client Feedback Section -->
-<!-- Client Feedback Section -->
-<section class="client-feedback">
+<section class="vertical-feedback-carousel">
     <div class="feedback-container">
         
         <!-- Left Section: Text, Title, and Video -->
         <div class="feedback-left">
             <div class="feedback-hollow-text">FEEDBACK</div>
             <h1 class="feedback-subtitle">Client Feedback</h1>
-            <h2 class="feedback-title">Hear What Our Client Say About Property</h2>
+            <h2 class="feedback-title">Hear What Our Clients Say</h2>
             <p class="feedback-description">
-                Indulge in the epitome of luxury living at Luxury, where every amenity is meticulously designed to elevate your lifestyle.
+                Indulge in the epitome of luxury living, where every amenity is meticulously designed to elevate your lifestyle.
             </p>
-            <div class="video-thumbnail" onclick="openVideo()">
+            <div class="video-thumbnail" onclick="openVerticalVideo()">
                 <img src="YT Thumbnail.svg" alt="Client Testimonial Video">
                 <div class="play-button">&#9658;</div>
             </div>
@@ -674,75 +673,74 @@
 
         <!-- Right Section: Carousel -->
         <div class="feedback-right">
-            <div class="carousel-container">
-                <div class="carousel-slide">
-                    <!-- Feedback Cards -->
-                    <div class="feedback-card">
+            <div class="vertical-carousel-container">
+                <div class="vertical-carousel-slide">
+                    <!-- Feedback Cards (Duplicated for Infinite Scroll Effect) -->
+                    <div class="feedback-card-vertical">
                         <div class="client-info">
                             <img src="assests/Testomonial 1.png" alt="Client 1">
-                            <h3>Sarah P.</h3>
+                            <h3>Sarah A.</h3>
                             <p>Happy Client</p>
                         </div>
-                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle.<br>⭐️⭐️⭐️⭐️⭐️</p>
                     </div>
 
-                    <!-- Feedback Cards -->
-                    <div class="feedback-card">
+                    <div class="feedback-card-vertical">
                         <div class="client-info">
-                            <img src="assests/Testomonial 2.png" alt="Client 1">
-                            <h3>Sarah P.</h3>
+                            <img src="assests/Testomonial 2.png" alt="Client 2">
+                            <h3>Emily B.</h3>
                             <p>Happy Client</p>
                         </div>
-                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                        <p class="feedback-text"><b>Fast and Fair!</b> I needed to sell my home fast, and GIGI made it happen. Excellent service!<br>⭐️⭐️⭐️⭐️⭐️</p>
                     </div>
 
-                    <!-- Feedback Cards -->
-                    <div class="feedback-card">
+                    <!-- Add more feedback cards as needed -->
+                    
+                    <!-- Duplicate Cards for Infinite Looping -->
+                    <div class="feedback-card-vertical">
                         <div class="client-info">
                             <img src="assests/Testomonial 3.png" alt="Client 1">
-                            <h3>Sarah P.</h3>
+                            <h3>Sarah C.</h3>
                             <p>Happy Client</p>
                         </div>
-                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle.<br>⭐️⭐️⭐️⭐️⭐️</p>
                     </div>
 
-                    <!-- Feedback Cards -->
-                    <div class="feedback-card">
+                    <div class="feedback-card-vertical">
                         <div class="client-info">
-                            <img src="assests/Testomonial 4.png" alt="Client 1">
-                            <h3>Sarah P.</h3>
+                            <img src="assests/Testomonial 4.png" alt="Client 2">
+                            <h3>Emily D.</h3>
                             <p>Happy Client</p>
                         </div>
-                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                        <p class="feedback-text"><b>Fast and Fair!</b> I needed to sell my home fast, and GIGI made it happen. Excellent service!<br>⭐️⭐️⭐️⭐️⭐️</p>
                     </div>
 
-                    <!-- Feedback Cards -->
-                    <div class="feedback-card">
+                    <div class="feedback-card-vertical">
                         <div class="client-info">
-                            <img src="assests/Testimonial 5.jpg" alt="Client 1">
-                            <h3>Sarah P.</h3>
+                            <img src="assests/Testimonial 5.jpg" alt="Client 2">
+                            <h3>Emily E.</h3>
                             <p>Happy Client</p>
                         </div>
-                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                        <p class="feedback-text"><b>Fast and Fair!</b> I needed to sell my home fast, and GIGI made it happen. Excellent service!<br>⭐️⭐️⭐️⭐️⭐️</p>
                     </div>
-                    <!-- Additional Feedback Cards as needed -->
+
                 </div>
             </div>
         </div>
 
         <!-- Carousel Controls - Positioned Outside Feedback Right -->
-        <div class="carousel-controls">
-            <div class="carousel-prev">&#9650;</div>
-            <div class="carousel-next">&#9660;</div>
+        <div class="vertical-carousel-controls">
+            <div class="vertical-carousel-prev">&#9650;</div>
+            <div class="vertical-carousel-next">&#9660;</div>
         </div>        
     </div>
 </section>
 
 <!-- Video Overlay -->
-<div id="videoOverlay" class="video-overlay">
+<div id="verticalVideoOverlay" class="video-overlay">
     <div class="video-overlay-content">
-        <span class="close" onclick="closeVideo()">&times;</span>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eDqfg_LexCQ?si=T7dptv8d7rn8kCBv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <span class="close" onclick="closeVerticalVideo()">&times;</span>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eDqfg_LexCQ" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 
